# hire-rag

./: .dockeringnore  Dockerfile  api.py  blueapex.py  cross.py  embedding.py  func.py  main.py  pyproject.toml  query.py  remote.py  requirements.txt  test.py  tool.py  workflow.py
blueapex/: chroma.sqlite3
