[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.2.0",
    "chromadb>=1.0.15",
    "fastapi[standard]>=0.116.0",
    "httpx>=0.28.1",
    "numpy>=2.3.1",
    "openai>=1.95.0",
    "pydantic>=2.11.7",
    "returns>=0.25.0",
    "tiktoken>=0.9.0",
    "toolz>=1.0.0",
    "uvicorn[standard]>=0.35.0",
    "uvloop>=0.21.0",
]

